--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body{
     font-family: 'Poppins', sans-serif;
     font-family: 'Roboto', sans-serif;
+    margin: 0;
 }
 
 h1{
@@ -13,11 +14,11 @@ h1{
     color: orange;
 }
 .half-width{
-    width: 41%;
+    width: 40%;
     float: left;
     margin-left: 5%;
     padding-left: 2%;
-    margin-top: 0;
+    
     
 
 }
@@ -27,4 +28,19 @@ h1{
 }
 .half-width p{
     font-size: 20px;
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+}
+.link-button{
+    background-image: linear-gradient(45deg,  lightsalmon, tomato);
+    text-decoration: none;
+    padding: 10px 20px;
+    font-weight: 700;
+    color: white;
+    border-radius: 5px;
 }
